--- a/index.html
+++ b/index.html
@@ -13,7 +13,142 @@
       <div class="container"></div>
     </header>
     <main class="main">
-      <div class="container"></div>
+      <div class="menu">
+        <div class="container">
+          <h2 class="menu__title">Меню</h2>
+        </div>
+        <div class="menu__tabs tabs">
+          <ul class="tabs__list">
+            <li>Скидки</li>
+            <li>Салаты/закуски</li>
+            <li>Первые блюда</li>
+            <li>Вторые блюда</li>
+            <li>Десерты</li>
+            <li>Пицца</li>
+            <li>Комбо-обеды</li>
+            <li>Гастроконструкторы</li>
+            <li>Напитки</li>
+          </ul>
+          <div class="tabs__content">
+            <div class="tabs__item">
+              <span class="tabs__tag">Блюдо дня</span>
+              <img
+                class="tabs__img"
+                src="/images/content/menu-item-1.jpg"
+                alt=""
+              />
+              <div class="tabs__name">Салат Оливье</div>
+              <div class="tabs__descr">250г</div>
+              <div class="tabs__price">123 &#8381;</div>
+            </div>
+            <div class="tabs__item">
+              <span class="tabs__tag">Обед</span>
+              <img
+                class="tabs__img"
+                src="/images/content/menu-item-2.jpg"
+                alt=""
+              />
+              <div class="tabs__name">
+                ОООоооооооооооооооочень длинное название
+              </div>
+              <div class="tabs__descr">250г</div>
+              <div class="tabs__price">123 &#8381;</div>
+            </div>
+            <div class="tabs__item">
+              <span class="tabs__tag">Блюдо дня</span>
+              <img
+                class="tabs__img"
+                src="/images/content/menu-item-3.jpg"
+                alt=""
+              />
+              <div class="tabs__name">Салат Оливье</div>
+              <div class="tabs__descr">250г</div>
+              <div class="tabs__price">123 &#8381;</div>
+            </div>
+            <div class="tabs__item">
+              <span class="tabs__tag">Блюдо дня</span>
+              <img
+                class="tabs__img"
+                src="/images/content/menu-item-4.jpg"
+                alt=""
+              />
+              <div class="tabs__name">Салат Оливье</div>
+              <div class="tabs__descr">250г</div>
+              <div class="tabs__price">123 &#8381;</div>
+            </div>
+            <div class="tabs__item">
+              <img
+                class="tabs__img"
+                src="/images/content/menu-item-1.jpg"
+                alt=""
+              />
+              <div class="tabs__name">Салат Оливье</div>
+              <div class="tabs__descr">250г</div>
+              <div class="tabs__price">123 &#8381;</div>
+            </div>
+            <div class="tabs__item">
+              <img
+                class="tabs__img"
+                src="/images/content/menu-item-2.jpg"
+                alt=""
+              />
+              <div class="tabs__name">Салат Оливье</div>
+              <div class="tabs__descr">250г</div>
+              <div class="tabs__price">123 &#8381;</div>
+            </div>
+            <div class="tabs__item">
+              <img
+                class="tabs__img"
+                src="/images/content/menu-item-3.jpg"
+                alt=""
+              />
+              <div class="tabs__name">Салат Оливье</div>
+              <div class="tabs__descr">250г</div>
+              <div class="tabs__price">123 &#8381;</div>
+            </div>
+            <div class="tabs__item">
+              <img
+                class="tabs__img"
+                src="/images/content/menu-item-4.jpg"
+                alt=""
+              />
+              <div class="tabs__name">Салат Оливье</div>
+              <div class="tabs__descr">250г</div>
+              <div class="tabs__price">123 &#8381;</div>
+            </div>
+            <div class="tabs__item">
+              <img
+                class="tabs__img"
+                src="/images/content/menu-item-1.jpg"
+                alt=""
+              />
+              <div class="tabs__name">Салат Оливье</div>
+              <div class="tabs__descr">250г</div>
+              <div class="tabs__price">123 &#8381;</div>
+            </div>
+            <div class="tabs__item">
+              <img
+                class="tabs__img"
+                src="/images/content/menu-item-2.jpg"
+                alt=""
+              />
+              <div class="tabs__name">Салат Оливье</div>
+              <div class="tabs__descr">250г</div>
+              <div class="tabs__price">123 &#8381;</div>
+            </div>
+            <div class="tabs__item">
+              <img
+                class="tabs__img"
+                src="/images/content/menu-item-3.jpg"
+                alt=""
+              />
+              <div class="tabs__name">Салат Оливье</div>
+              <div class="tabs__descr">250г</div>
+              <div class="tabs__price">123 &#8381;</div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer class="footer">
       <div class="container"></div>
