Добавлен блок отзывов

--- a/index.html
+++ b/index.html
@@ -13,142 +13,225 @@
       <div class="container"></div>
     </header>
     <main class="main">
-      <div class="menu">
+      <section class="menu">
         <div class="container">
-          <h2 class="menu__title">Меню</h2>
-        </div>
-        <div class="menu__tabs tabs">
-          <ul class="tabs__list">
-            <li>Скидки</li>
-            <li>Салаты/закуски</li>
-            <li>Первые блюда</li>
-            <li>Вторые блюда</li>
-            <li>Десерты</li>
-            <li>Пицца</li>
-            <li>Комбо-обеды</li>
-            <li>Гастроконструкторы</li>
-            <li>Напитки</li>
-          </ul>
-          <div class="tabs__content">
-            <div class="tabs__item">
-              <span class="tabs__tag">Блюдо дня</span>
-              <img
-                class="tabs__img"
-                src="/images/content/menu-item-1.jpg"
-                alt=""
-              />
-              <div class="tabs__name">Салат Оливье</div>
-              <div class="tabs__descr">250г</div>
-              <div class="tabs__price">123 &#8381;</div>
-            </div>
-            <div class="tabs__item">
-              <span class="tabs__tag">Обед</span>
-              <img
-                class="tabs__img"
-                src="/images/content/menu-item-2.jpg"
-                alt=""
-              />
-              <div class="tabs__name">
-                ОООоооооооооооооооочень длинное название
+          <h2 class="menu__title title">Меню</h2>
+          <div class="menu__tabs tabs">
+            <ul class="tabs__list">
+              <li>Скидки</li>
+              <li>Салаты/закуски</li>
+              <li>Первые блюда</li>
+              <li>Вторые блюда</li>
+              <li>Десерты</li>
+              <li>Пицца</li>
+              <li>Комбо-обеды</li>
+              <li>Гастроконструкторы</li>
+              <li>Напитки</li>
+            </ul>
+            <div class="tabs__content">
+              <div class="tabs__item">
+                <span class="tabs__tag">Блюдо дня</span>
+                <img
+                  class="tabs__img"
+                  src="/images/content/menu-item-1.jpg"
+                  alt=""
+                />
+                <div class="tabs__name">Салат Оливье</div>
+                <div class="tabs__descr">250г</div>
+                <div class="tabs__price">123 &#8381;</div>
               </div>
-              <div class="tabs__descr">250г</div>
-              <div class="tabs__price">123 &#8381;</div>
-            </div>
-            <div class="tabs__item">
-              <span class="tabs__tag">Блюдо дня</span>
-              <img
-                class="tabs__img"
-                src="/images/content/menu-item-3.jpg"
-                alt=""
-              />
-              <div class="tabs__name">Салат Оливье</div>
-              <div class="tabs__descr">250г</div>
-              <div class="tabs__price">123 &#8381;</div>
-            </div>
-            <div class="tabs__item">
-              <span class="tabs__tag">Блюдо дня</span>
-              <img
-                class="tabs__img"
-                src="/images/content/menu-item-4.jpg"
-                alt=""
-              />
-              <div class="tabs__name">Салат Оливье</div>
-              <div class="tabs__descr">250г</div>
-              <div class="tabs__price">123 &#8381;</div>
-            </div>
-            <div class="tabs__item">
-              <img
-                class="tabs__img"
-                src="/images/content/menu-item-1.jpg"
-                alt=""
-              />
-              <div class="tabs__name">Салат Оливье</div>
-              <div class="tabs__descr">250г</div>
-              <div class="tabs__price">123 &#8381;</div>
-            </div>
-            <div class="tabs__item">
-              <img
-                class="tabs__img"
-                src="/images/content/menu-item-2.jpg"
-                alt=""
-              />
-              <div class="tabs__name">Салат Оливье</div>
-              <div class="tabs__descr">250г</div>
-              <div class="tabs__price">123 &#8381;</div>
-            </div>
-            <div class="tabs__item">
-              <img
-                class="tabs__img"
-                src="/images/content/menu-item-3.jpg"
-                alt=""
-              />
-              <div class="tabs__name">Салат Оливье</div>
-              <div class="tabs__descr">250г</div>
-              <div class="tabs__price">123 &#8381;</div>
-            </div>
-            <div class="tabs__item">
-              <img
-                class="tabs__img"
-                src="/images/content/menu-item-4.jpg"
-                alt=""
-              />
-              <div class="tabs__name">Салат Оливье</div>
-              <div class="tabs__descr">250г</div>
-              <div class="tabs__price">123 &#8381;</div>
-            </div>
-            <div class="tabs__item">
-              <img
-                class="tabs__img"
-                src="/images/content/menu-item-1.jpg"
-                alt=""
-              />
-              <div class="tabs__name">Салат Оливье</div>
-              <div class="tabs__descr">250г</div>
-              <div class="tabs__price">123 &#8381;</div>
-            </div>
-            <div class="tabs__item">
-              <img
-                class="tabs__img"
-                src="/images/content/menu-item-2.jpg"
-                alt=""
-              />
-              <div class="tabs__name">Салат Оливье</div>
-              <div class="tabs__descr">250г</div>
-              <div class="tabs__price">123 &#8381;</div>
-            </div>
-            <div class="tabs__item">
-              <img
-                class="tabs__img"
-                src="/images/content/menu-item-3.jpg"
-                alt=""
-              />
-              <div class="tabs__name">Салат Оливье</div>
-              <div class="tabs__descr">250г</div>
-              <div class="tabs__price">123 &#8381;</div>
+              <div class="tabs__item">
+                <span class="tabs__tag">Обед</span>
+                <img
+                  class="tabs__img"
+                  src="/images/content/menu-item-2.jpg"
+                  alt=""
+                />
+                <div class="tabs__name">
+                  ОООоооооооооооооооочень длинное название
+                </div>
+                <div class="tabs__descr">250г</div>
+                <div class="tabs__price">123 &#8381;</div>
+              </div>
+              <div class="tabs__item">
+                <span class="tabs__tag">Блюдо дня</span>
+                <img
+                  class="tabs__img"
+                  src="/images/content/menu-item-3.jpg"
+                  alt=""
+                />
+                <div class="tabs__name">Салат Оливье</div>
+                <div class="tabs__descr">250г</div>
+                <div class="tabs__price">123 &#8381;</div>
+              </div>
+              <div class="tabs__item">
+                <span class="tabs__tag">Блюдо дня</span>
+                <img
+                  class="tabs__img"
+                  src="/images/content/menu-item-4.jpg"
+                  alt=""
+                />
+                <div class="tabs__name">Салат Оливье</div>
+                <div class="tabs__descr">250г</div>
+                <div class="tabs__price">123 &#8381;</div>
+              </div>
+              <div class="tabs__item">
+                <img
+                  class="tabs__img"
+                  src="/images/content/menu-item-1.jpg"
+                  alt=""
+                />
+                <div class="tabs__name">Салат Оливье</div>
+                <div class="tabs__descr">250г</div>
+                <div class="tabs__price">123 &#8381;</div>
+              </div>
+              <div class="tabs__item">
+                <img
+                  class="tabs__img"
+                  src="/images/content/menu-item-2.jpg"
+                  alt=""
+                />
+                <div class="tabs__name">Салат Оливье</div>
+                <div class="tabs__descr">250г</div>
+                <div class="tabs__price">123 &#8381;</div>
+              </div>
+              <div class="tabs__item">
+                <img
+                  class="tabs__img"
+                  src="/images/content/menu-item-3.jpg"
+                  alt=""
+                />
+                <div class="tabs__name">Салат Оливье</div>
+                <div class="tabs__descr">250г</div>
+                <div class="tabs__price">123 &#8381;</div>
+              </div>
+              <div class="tabs__item">
+                <img
+                  class="tabs__img"
+                  src="/images/content/menu-item-4.jpg"
+                  alt=""
+                />
+                <div class="tabs__name">Салат Оливье</div>
+                <div class="tabs__descr">250г</div>
+                <div class="tabs__price">123 &#8381;</div>
+              </div>
+              <div class="tabs__item">
+                <img
+                  class="tabs__img"
+                  src="/images/content/menu-item-1.jpg"
+                  alt=""
+                />
+                <div class="tabs__name">Салат Оливье</div>
+                <div class="tabs__descr">250г</div>
+                <div class="tabs__price">123 &#8381;</div>
+              </div>
+              <div class="tabs__item">
+                <img
+                  class="tabs__img"
+                  src="/images/content/menu-item-2.jpg"
+                  alt=""
+                />
+                <div class="tabs__name">Салат Оливье</div>
+                <div class="tabs__descr">250г</div>
+                <div class="tabs__price">123 &#8381;</div>
+              </div>
+              <div class="tabs__item">
+                <img
+                  class="tabs__img"
+                  src="/images/content/menu-item-3.jpg"
+                  alt=""
+                />
+                <div class="tabs__name">Салат Оливье</div>
+                <div class="tabs__descr">250г</div>
+                <div class="tabs__price">123 &#8381;</div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
+      </section>
+      <section class="feedback">
+        <div class="container">
+          <h2 class="feedback__title title">Отзывы</h2>
+          <div class="feedback__items">
+            <div class="feedback__item">
+              <div class="feedback__top">
+                <img
+                  src="/images/content/feedback-1.jpg"
+                  alt=""
+                  class="feedback__img"
+                />
+                <div class="feedback__author">
+                  <div class="feedback__author-name">Иван Иванов</div>
+                  <div class="feedback__author-descr">Клиент</div>
+                </div>
+              </div>
+              <div class="feedback__text">
+                Очень вкусно!
+                <br /><br />
+                Первый бренд, полностью готовых ресторанных блюд в замороженном
+                виде с помощью самой инновационной технологии заморозки
+              </div>
+            </div>
+            <div class="feedback__item">
+              <div class="feedback__top">
+                <img
+                  src="/images/content/feedback-2.jpg"
+                  alt=""
+                  class="feedback__img"
+                />
+                <div class="feedback__author">
+                  <div class="feedback__author-name">Мария Никифорова</div>
+                  <div class="feedback__author-descr">Клиент</div>
+                </div>
+              </div>
+              <div class="feedback__text">
+                Очень вкусно!
+                <br /><br />
+                Первый бренд, полностью готовых ресторанных блюд в замороженном
+                виде с помощью самой инновационной технологии заморозки
+              </div>
+            </div>
+            <div class="feedback__item">
+              <div class="feedback__top">
+                <img
+                  src="/images/content/feedback-3.jpg"
+                  alt=""
+                  class="feedback__img"
+                />
+                <div class="feedback__author">
+                  <div class="feedback__author-name">Рафик Саркисян</div>
+                  <div class="feedback__author-descr">Клиент</div>
+                </div>
+              </div>
+              <div class="feedback__text">
+                Очень вкусно!
+                <br /><br />
+                Первый бренд, полностью готовых ресторанных блюд в замороженном
+                виде с помощью самой инновационной технологии заморозки
+              </div>
+            </div>
+            <div class="feedback__item">
+              <div class="feedback__top">
+                <img
+                  src="/images/content/feedback-4.jpg"
+                  alt=""
+                  class="feedback__img"
+                />
+                <div class="feedback__author">
+                  <div class="feedback__author-name">Иван Иванов</div>
+                  <div class="feedback__author-descr">Клиент</div>
+                </div>
+              </div>
+              <div class="feedback__text">
+                Очень вкусно!
+                <br /><br />
+                Первый бренд, полностью готовых ресторанных блюд в замороженном
+                виде с помощью самой инновационной технологии заморозки
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="container"></div>
