Добавлены блоки о нас и футер

--- a/index.html
+++ b/index.html
@@ -165,12 +165,12 @@
                   <div class="feedback__author-descr">Клиент</div>
                 </div>
               </div>
-              <div class="feedback__text">
+              <p class="feedback__text">
                 Очень вкусно!
                 <br /><br />
                 Первый бренд, полностью готовых ресторанных блюд в замороженном
                 виде с помощью самой инновационной технологии заморозки
-              </div>
+              </p>
             </div>
             <div class="feedback__item">
               <div class="feedback__top">
@@ -184,12 +184,12 @@
                   <div class="feedback__author-descr">Клиент</div>
                 </div>
               </div>
-              <div class="feedback__text">
+              <p class="feedback__text">
                 Очень вкусно!
                 <br /><br />
                 Первый бренд, полностью готовых ресторанных блюд в замороженном
                 виде с помощью самой инновационной технологии заморозки
-              </div>
+              </p>
             </div>
             <div class="feedback__item">
               <div class="feedback__top">
@@ -203,12 +203,12 @@
                   <div class="feedback__author-descr">Клиент</div>
                 </div>
               </div>
-              <div class="feedback__text">
+              <p class="feedback__text">
                 Очень вкусно!
                 <br /><br />
                 Первый бренд, полностью готовых ресторанных блюд в замороженном
                 виде с помощью самой инновационной технологии заморозки
-              </div>
+              </p>
             </div>
             <div class="feedback__item">
               <div class="feedback__top">
@@ -222,12 +222,12 @@
                   <div class="feedback__author-descr">Клиент</div>
                 </div>
               </div>
-              <div class="feedback__text">
+              <p class="feedback__text">
                 Очень вкусно!
                 <br /><br />
                 Первый бренд, полностью готовых ресторанных блюд в замороженном
                 виде с помощью самой инновационной технологии заморозки
-              </div>
+              </p>
             </div>
           </div>
         </div>
@@ -240,31 +240,38 @@
               class="intstagram__img"
               src="/images/content/instagram-1.jpg"
               alt=""
-            /><img
+            />
+            <img
               class="intstagram__img"
               src="/images/content/instagram-2.jpg"
               alt=""
-            /><img
+            />
+            <img
               class="intstagram__img"
               src="/images/content/instagram-3.jpg"
               alt=""
-            /><img
+            />
+            <img
               class="intstagram__img"
               src="/images/content/instagram-4.jpg"
               alt=""
-            /><img
+            />
+            <img
               class="intstagram__img"
               src="/images/content/instagram-5.jpg"
               alt=""
-            /><img
+            />
+            <img
               class="intstagram__img"
               src="/images/content/instagram-6.jpg"
               alt=""
-            /><img
+            />
+            <img
               class="intstagram__img"
               src="/images/content/instagram-7.jpg"
               alt=""
-            /><img
+            />
+            <img
               class="intstagram__img"
               src="/images/content/instagram-8.jpg"
               alt=""
@@ -272,9 +279,79 @@
           </div>
         </div>
       </section>
+      <section class="about">
+        <div class="container">
+          <div class="about__inner">
+            <div class="about__left">
+              <div class="about__title title">О нас</div>
+              <p class="about__text">
+                Формирование удобной привычки покупать готовую еду ресторанного
+                качества, которая долго хранится дома и быстро готовится.
+                Дополнительный комфорт и удобство для миллионов людей.
+                Освободить для женщин еще больше свободного от готовки времени
+                для их более полной самореализации в другом.
+              </p>
+            </div>
+            <div class="about__right">
+              <form class="about__form form">
+                <h3 class="form__title">Напишите нам</h3>
+                <input class="form__input" type="text" placeholder="Имя" />
+                <input
+                  class="form__input"
+                  type="tel"
+                  placeholder="Номер телефона"
+                />
+                <textarea
+                  class="form__textarea"
+                  placeholder="Ваше сообщение"
+                ></textarea>
+                <button class="form__btn">Отправить</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer">
-      <div class="container"></div>
+      <div class="container">
+        <div class="footer__inner">
+          <ul class="footer__links">
+            <li class="footer__item">
+              <a class="footer__link" href="#">Ленцизионное соглашение</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">Правовая информация</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">Публичная оферта</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">Сертификаты</a>
+            </li>
+            <li class="footer__item">Icetory©2021</li>
+          </ul>
+          <ul class="footer__social">
+            <li class="footer__social-item">
+              <a class="footer__social-link" href="#">
+                <img
+                  class="footer__social-img"
+                  src="/images/icons/social-icon-1.svg"
+                  alt="Instagram"
+                />
+              </a>
+            </li>
+            <li class="footer__social-item">
+              <a class="footer__social-link" href="#">
+                <img
+                  class="footer__social-img"
+                  src="/images/icons/social-icon-2.svg"
+                  alt="Facebook"
+                />
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </footer>
     <script src="/js/libs.min.js"></script>
     <script src="/js/script.js"></script>
