--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
         <div class="container">
           <h2 class="menu__title title">Меню</h2>
           <div class="menu__tabs tabs">
-            <ul class="tabs__list">
-              <li>Скидки</li>
-              <li>Салаты/закуски</li>
-              <li>Первые блюда</li>
-              <li>Вторые блюда</li>
-              <li>Десерты</li>
-              <li>Пицца</li>
-              <li>Комбо-обеды</li>
-              <li>Гастроконструкторы</li>
-              <li>Напитки</li>
+            <ul class="tabs__nav">
+              <li class="tabs__nav-item">Скидки</li>
+              <li class="tabs__nav-item">Салаты/закуски</li>
+              <li class="tabs__nav-item">Первые блюда</li>
+              <li class="tabs__nav-item">Вторые блюда</li>
+              <li class="tabs__nav-item">Десерты</li>
+              <li class="tabs__nav-item">Пицца</li>
+              <li class="tabs__nav-item">Комбо-обеды</li>
+              <li class="tabs__nav-item">Гастроконструкторы</li>
+              <li class="tabs__nav-item">Напитки</li>
             </ul>
             <div class="tabs__content">
               <div class="tabs__item">
@@ -54,7 +54,7 @@
                 <div class="tabs__price">123 &#8381;</div>
               </div>
               <div class="tabs__item">
-                <span class="tabs__tag">Блюдо дня</span>
+                <span class="tabs__tag">Завтрак</span>
                 <img
                   class="tabs__img"
                   src="/images/content/menu-item-3.jpg"
@@ -65,7 +65,7 @@
                 <div class="tabs__price">123 &#8381;</div>
               </div>
               <div class="tabs__item">
-                <span class="tabs__tag">Блюдо дня</span>
+                <span class="tabs__tag">Бестселлер</span>
                 <img
                   class="tabs__img"
                   src="/images/content/menu-item-4.jpg"
@@ -150,7 +150,7 @@
         </div>
       </section>
       <section class="feedback">
-        <div class="container">
+        <div class="container feedback___container">
           <h2 class="feedback__title title">Отзывы</h2>
           <div class="feedback__items">
             <div class="feedback__item">
