Стилизован блок отзывов

--- a/index.html
+++ b/index.html
@@ -152,82 +152,84 @@
       <section class="feedback">
         <div class="container feedback___container">
           <h2 class="feedback__title title">Отзывы</h2>
-          <div class="feedback__items">
-            <div class="feedback__item">
-              <div class="feedback__top">
-                <img
-                  src="/images/content/feedback-1.jpg"
-                  alt=""
-                  class="feedback__img"
-                />
-                <div class="feedback__author">
-                  <div class="feedback__author-name">Иван Иванов</div>
-                  <div class="feedback__author-descr">Клиент</div>
+          <div class="feedback__wrapper">
+            <div class="feedback__items">
+              <div class="feedback__item">
+                <div class="feedback__top">
+                  <img
+                    src="/images/content/feedback-1.jpg"
+                    alt=""
+                    class="feedback__img"
+                  />
+                  <div class="feedback__author">
+                    <div class="feedback__author-name">Иван Иванов</div>
+                    <div class="feedback__author-descr">Клиент</div>
+                  </div>
                 </div>
+                <p class="feedback__text">
+                  <span class="feedback__text-title">Очень вкусно!</span>
+                  Первый бренд, полностью готовых ресторанных блюд в
+                  замороженном виде с помощью самой инновационной технологии
+                  заморозки
+                </p>
               </div>
-              <p class="feedback__text">
-                Очень вкусно!
-                <br /><br />
-                Первый бренд, полностью готовых ресторанных блюд в замороженном
-                виде с помощью самой инновационной технологии заморозки
-              </p>
-            </div>
-            <div class="feedback__item">
-              <div class="feedback__top">
-                <img
-                  src="/images/content/feedback-2.jpg"
-                  alt=""
-                  class="feedback__img"
-                />
-                <div class="feedback__author">
-                  <div class="feedback__author-name">Мария Никифорова</div>
-                  <div class="feedback__author-descr">Клиент</div>
+              <div class="feedback__item">
+                <div class="feedback__top">
+                  <img
+                    src="/images/content/feedback-2.jpg"
+                    alt=""
+                    class="feedback__img"
+                  />
+                  <div class="feedback__author">
+                    <div class="feedback__author-name">Мария Никифорова</div>
+                    <div class="feedback__author-descr">Клиент</div>
+                  </div>
                 </div>
+                <p class="feedback__text">
+                  <span class="feedback__text-title">Очень вкусно!</span>
+                  Первый бренд, полностью готовых ресторанных блюд в
+                  замороженном виде с помощью самой инновационной технологии
+                  заморозки
+                </p>
               </div>
-              <p class="feedback__text">
-                Очень вкусно!
-                <br /><br />
-                Первый бренд, полностью готовых ресторанных блюд в замороженном
-                виде с помощью самой инновационной технологии заморозки
-              </p>
-            </div>
-            <div class="feedback__item">
-              <div class="feedback__top">
-                <img
-                  src="/images/content/feedback-3.jpg"
-                  alt=""
-                  class="feedback__img"
-                />
-                <div class="feedback__author">
-                  <div class="feedback__author-name">Рафик Саркисян</div>
-                  <div class="feedback__author-descr">Клиент</div>
+              <div class="feedback__item">
+                <div class="feedback__top">
+                  <img
+                    src="/images/content/feedback-3.jpg"
+                    alt=""
+                    class="feedback__img"
+                  />
+                  <div class="feedback__author">
+                    <div class="feedback__author-name">Рафик Саркисян</div>
+                    <div class="feedback__author-descr">Клиент</div>
+                  </div>
                 </div>
+                <p class="feedback__text">
+                  <span class="feedback__text-title">Очень вкусно!</span>
+                  Первый бренд, полностью готовых ресторанных блюд в
+                  замороженном виде с помощью самой инновационной технологии
+                  заморозки
+                </p>
               </div>
-              <p class="feedback__text">
-                Очень вкусно!
-                <br /><br />
-                Первый бренд, полностью готовых ресторанных блюд в замороженном
-                виде с помощью самой инновационной технологии заморозки
-              </p>
-            </div>
-            <div class="feedback__item">
-              <div class="feedback__top">
-                <img
-                  src="/images/content/feedback-4.jpg"
-                  alt=""
-                  class="feedback__img"
-                />
-                <div class="feedback__author">
-                  <div class="feedback__author-name">Иван Иванов</div>
-                  <div class="feedback__author-descr">Клиент</div>
+              <div class="feedback__item">
+                <div class="feedback__top">
+                  <img
+                    src="/images/content/feedback-4.jpg"
+                    alt=""
+                    class="feedback__img"
+                  />
+                  <div class="feedback__author">
+                    <div class="feedback__author-name">Иван Иванов</div>
+                    <div class="feedback__author-descr">Клиент</div>
+                  </div>
                 </div>
+                <p class="feedback__text">
+                  <span class="feedback__text-title">Очень вкусно!</span>
+                  Первый бренд, полностью готовых ресторанных блюд в
+                  замороженном виде с помощью самой инновационной технологии
+                  заморозки
+                </p>
               </div>
-              <p class="feedback__text">
-                Очень вкусно!
-                <br /><br />
-                Первый бренд, полностью готовых ресторанных блюд в замороженном
-                виде с помощью самой инновационной технологии заморозки
-              </p>
             </div>
           </div>
         </div>
