Подключен слайдер для блока отзывов

--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
       <section class="feedback">
         <div class="container feedback___container">
           <h2 class="feedback__title title">Отзывы</h2>
-          <div class="feedback__wrapper">
-            <div class="feedback__items">
-              <div class="feedback__item">
+          <div class="feedback__wrapper feedback__swiper">
+            <div class="feedback__items swiper-wrapper">
+              <div class="feedback__item swiper-slide">
                 <div class="feedback__top">
                   <img
                     src="/images/content/feedback-1.jpg"
@@ -173,7 +173,7 @@
                   заморозки
                 </p>
               </div>
-              <div class="feedback__item">
+              <div class="feedback__item swiper-slide">
                 <div class="feedback__top">
                   <img
                     src="/images/content/feedback-2.jpg"
@@ -192,7 +192,7 @@
                   заморозки
                 </p>
               </div>
-              <div class="feedback__item">
+              <div class="feedback__item swiper-slide">
                 <div class="feedback__top">
                   <img
                     src="/images/content/feedback-3.jpg"
@@ -211,7 +211,7 @@
                   заморозки
                 </p>
               </div>
-              <div class="feedback__item">
+              <div class="feedback__item swiper-slide">
                 <div class="feedback__top">
                   <img
                     src="/images/content/feedback-4.jpg"
