Стилизован блок инстаграм

--- a/index.html
+++ b/index.html
@@ -239,42 +239,42 @@
           <div class="instagram__title title">Мы в инстаграме</div>
           <div class="instagram__items">
             <img
-              class="intstagram__img"
+              class="instagram__img"
               src="/images/content/instagram-1.jpg"
               alt=""
             />
             <img
-              class="intstagram__img"
+              class="instagram__img"
               src="/images/content/instagram-2.jpg"
               alt=""
             />
             <img
-              class="intstagram__img"
+              class="instagram__img"
               src="/images/content/instagram-3.jpg"
               alt=""
             />
             <img
-              class="intstagram__img"
+              class="instagram__img"
               src="/images/content/instagram-4.jpg"
               alt=""
             />
             <img
-              class="intstagram__img"
+              class="instagram__img"
               src="/images/content/instagram-5.jpg"
               alt=""
             />
             <img
-              class="intstagram__img"
+              class="instagram__img"
               src="/images/content/instagram-6.jpg"
               alt=""
             />
             <img
-              class="intstagram__img"
+              class="instagram__img"
               src="/images/content/instagram-7.jpg"
               alt=""
             />
             <img
-              class="intstagram__img"
+              class="instagram__img"
               src="/images/content/instagram-8.jpg"
               alt=""
             />
