--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
         <div class="footer__inner">
           <ul class="footer__links">
             <li class="footer__item">
-              <a class="footer__link" href="#">Ленцизионное соглашение</a>
+              <a class="footer__link" href="#">Лицензионное соглашение</a>
             </li>
             <li class="footer__item">
               <a class="footer__link" href="#">Правовая информация</a>
