Headers style added

--- a/index.html
+++ b/index.html
@@ -41,13 +41,7 @@
             <form class="header__search">
               <input type="text" class="header__input" placeholder="Поиск" />
             </form>
-            <div class="header__cart">
-              <img
-                src="/images/icons/cart-icon.svg"
-                alt=""
-                class="header__cart-img"
-              />
-            </div>
+            <div class="header__cart"></div>
           </div>
         </div>
       </div>
