--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
           <div class="hero__inner">
             <h1 class="hero__title">Между поваром и тобой - 5 минут</h1>
             <p class="hero__text">
-              Первый бренд, полностью готовых ресторанных блюд в замороженном
-              виде с помощью самой инновационной технологии заморозки, которая
-              полностью сохраняет структуру, все качества и вкус блюд после
-              разогрева
+              Первый бренд, полностью готовых ресторанных блюд
+              в&nbspзамороженном виде с помощью самой инновационной технологии
+              заморозки, которая полностью сохраняет структуру, все качества и
+              вкус блюд после разогрева
             </p>
           </div>
         </div>
