Stories style added

--- a/index.html
+++ b/index.html
@@ -63,19 +63,34 @@
       <section class="stories">
         <div class="container">
           <div class="stories__items">
-            <div class="stories__item">
+            <div
+              class="stories__item stories__item--active"
+              style="background-image: url('/images/content/stories-1.svg')"
+            >
               <h4 class="stories__title">Иновационная заморозка</h4>
             </div>
-            <div class="stories__item">
+            <div
+              class="stories__item"
+              style="background-image: url('/images/content/stories-2.svg')"
+            >
               <h4 class="stories__title">Технология приготовления</h4>
             </div>
-            <div class="stories__item">
+            <div
+              class="stories__item"
+              style="background-image: url('/images/content/stories-3.svg')"
+            >
               <h4 class="stories__title">Готовое блюдо от шеф-повора</h4>
             </div>
-            <div class="stories__item">
+            <div
+              class="stories__item"
+              style="background-image: url('/images/content/stories-4.svg')"
+            >
               <h4 class="stories__title">Время</h4>
             </div>
-            <div class="stories__item">
+            <div
+              class="stories__item"
+              style="background-image: url('/images/content/stories-5.svg')"
+            >
               <h4 class="stories__title">Доставка и торговые точки</h4>
             </div>
           </div>
