--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
                   Блюда готовятся профессиональными ресторанными поварами
                 </div>
               </div>
-              <div class="process__item">
+              <div class="process__item process__item--long">
                 <div class="process__number">03</div>
-                <div class="process__text">
+                <div class="process__text process__text--long">
                   <h3 class="process__text-title">
                     Иновационная акустическая заморозка
                   </h3>
@@ -124,7 +124,7 @@
                 </div>
                 <img
                   src="/images/icons/frozen-sticker.png"
-                  alt=""
+                  alt="Акустическая заморозка"
                   class="process__img"
                 />
               </div>
