Menu style added

--- a/index.html
+++ b/index.html
@@ -197,7 +197,9 @@
                 />
                 <div class="tabs__name">Салат Оливье</div>
                 <div class="tabs__descr">250г</div>
-                <div class="tabs__price">123 &#8381;</div>
+                <div class="tabs__price tabs__price--discount">
+                  123 &#8381;<span class="tabs__price--old">123 &#8381;</span>
+                </div>
               </div>
               <div class="tabs__item">
                 <span class="tabs__tag">Бестселлер</span>
@@ -213,7 +215,7 @@
               <div class="tabs__item">
                 <img
                   class="tabs__img"
-                  src="/images/content/menu-item-1.jpg"
+                  src="/images/content/menu-item-5.jpg"
                   alt=""
                 />
                 <div class="tabs__name">Салат Оливье</div>
@@ -223,7 +225,7 @@
               <div class="tabs__item">
                 <img
                   class="tabs__img"
-                  src="/images/content/menu-item-2.jpg"
+                  src="/images/content/menu-item-6.jpg"
                   alt=""
                 />
                 <div class="tabs__name">Салат Оливье</div>
@@ -233,7 +235,7 @@
               <div class="tabs__item">
                 <img
                   class="tabs__img"
-                  src="/images/content/menu-item-3.jpg"
+                  src="/images/content/menu-item-7.jpg"
                   alt=""
                 />
                 <div class="tabs__name">Салат Оливье</div>
@@ -243,7 +245,7 @@
               <div class="tabs__item">
                 <img
                   class="tabs__img"
-                  src="/images/content/menu-item-4.jpg"
+                  src="/images/content/menu-item-8.jpg"
                   alt=""
                 />
                 <div class="tabs__name">Салат Оливье</div>
@@ -253,7 +255,7 @@
               <div class="tabs__item">
                 <img
                   class="tabs__img"
-                  src="/images/content/menu-item-1.jpg"
+                  src="/images/content/menu-item-9.jpg"
                   alt=""
                 />
                 <div class="tabs__name">Салат Оливье</div>
@@ -263,7 +265,7 @@
               <div class="tabs__item">
                 <img
                   class="tabs__img"
-                  src="/images/content/menu-item-2.jpg"
+                  src="/images/content/menu-item-10.jpg"
                   alt=""
                 />
                 <div class="tabs__name">Салат Оливье</div>
@@ -273,7 +275,7 @@
               <div class="tabs__item">
                 <img
                   class="tabs__img"
-                  src="/images/content/menu-item-3.jpg"
+                  src="/images/content/menu-item-11.jpg"
                   alt=""
                 />
                 <div class="tabs__name">Салат Оливье</div>
