--- a/index.html
+++ b/index.html
@@ -62,36 +62,38 @@
       </section>
       <section class="stories">
         <div class="container">
-          <div class="stories__items">
-            <div
-              class="stories__item stories__item--active"
-              style="background-image: url('/images/content/stories-1.svg')"
-            >
-              <h4 class="stories__title">Иновационная заморозка</h4>
-            </div>
-            <div
-              class="stories__item"
-              style="background-image: url('/images/content/stories-2.svg')"
-            >
-              <h4 class="stories__title">Технология приготовления</h4>
-            </div>
-            <div
-              class="stories__item"
-              style="background-image: url('/images/content/stories-3.svg')"
-            >
-              <h4 class="stories__title">Готовое блюдо от шеф-повора</h4>
-            </div>
-            <div
-              class="stories__item"
-              style="background-image: url('/images/content/stories-4.svg')"
-            >
-              <h4 class="stories__title">Время</h4>
-            </div>
-            <div
-              class="stories__item"
-              style="background-image: url('/images/content/stories-5.svg')"
-            >
-              <h4 class="stories__title">Доставка и торговые точки</h4>
+          <div class="stories__items stories__swiper">
+            <div class="stories__wrapper swiper-wrapper">
+              <div
+                class="stories__item stories__item--active swiper-slide"
+                style="background-image: url('/images/content/stories-1.svg')"
+              >
+                <h4 class="stories__title">Иновационная заморозка</h4>
+              </div>
+              <div
+                class="stories__item swiper-slide"
+                style="background-image: url('/images/content/stories-2.svg')"
+              >
+                <h4 class="stories__title">Технология приготовления</h4>
+              </div>
+              <div
+                class="stories__item swiper-slide"
+                style="background-image: url('/images/content/stories-3.svg')"
+              >
+                <h4 class="stories__title">Готовое блюдо от шеф-повора</h4>
+              </div>
+              <div
+                class="stories__item swiper-slide"
+                style="background-image: url('/images/content/stories-4.svg')"
+              >
+                <h4 class="stories__title">Время</h4>
+              </div>
+              <div
+                class="stories__item swiper-slide"
+                style="background-image: url('/images/content/stories-5.svg')"
+              >
+                <h4 class="stories__title">Доставка и торговые точки</h4>
+              </div>
             </div>
           </div>
         </div>
