--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </div>
         </div>
       </section>
-      <section class="process">
+      <section class="process" id="process">
         <div class="container">
           <div class="process__inner">
             <h2 class="process__title title">Как это работает</h2>
@@ -142,7 +142,7 @@
           </div>
         </div>
       </section>
-      <section class="menu">
+      <section class="menu" id="menu">
         <div class="container">
           <h2 class="menu__title title">Меню</h2>
           <div class="menu__tabs tabs">
@@ -1416,7 +1416,7 @@
           </div>
         </div>
       </section>
-      <section class="about">
+      <section class="about" id="about">
         <div class="container">
           <div class="about__inner">
             <div class="about__left">
