--- a/index.html
+++ b/index.html
@@ -9,6 +9,62 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
+    <div class="product-card card">
+      <div class="card__top">
+        <div class="card__title">Тар-тар из говядины</div>
+        <span class="card__tag">Блюдо дня</span>
+        <button class="card__close-btn"></button>
+      </div>
+      <div class="card__info">
+        <div class="card__images">
+          <img
+            class="card__image"
+            src="/images/content/menu-item-6.jpg"
+            alt="Тар-тар из говядины"
+          />
+          <div class="card__thumbs">
+            <img
+              src="/images/content/menu-item-6.jpg"
+              alt="Тар-тар из говядины"
+              class="card__thumbs-img card__thumbs-img--active"
+            />
+            <img
+              src="/images/content/menu-item-7.jpg"
+              alt="Тар-тар из говядины"
+              class="card__thumbs-img"
+            />
+          </div>
+        </div>
+        <div class="card__text text">
+          <div class="text__title">Состав</div>
+          <div class="text__description">
+            Курица маринованная, помидоры свежие, морковь свежая, фасоль
+            стручковая, салат айсберг, салат ромейн, соус тайский, масло
+            растительное, соус тар-тар, арахис соленый, зелень кинзы свежая.
+          </div>
+          <table class="card__table table">
+            <tr class="table__row">
+              <th class="table__title">Вес</th>
+              <th class="table__title">Калорийность</th>
+              <th class="table__title">Белки</th>
+              <th class="table__title">Жиры</th>
+              <th class="table__title">Углеводы</th>
+            </tr>
+            <div class="table__row">
+              <td class="table__data">101 г</td>
+              <td class="table__data">250 ккал</td>
+              <td class="table__data">10 г</td>
+              <td class="table__data">17, 3 г</td>
+              <td class="table__data">13, 9 г</td>
+            </div>
+          </table>
+        </div>
+      </div>
+      <div class="card__bottom">
+        <div class="card__price">450 ₽</div>
+        <button class="card__btn">Добавить</button>
+      </div>
+    </div>
     <header class="header">
       <div class="container">
         <div class="header__inner">
