Style for 1024px ratio added

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 class="stories__item stories__item--active swiper-slide"
                 style="background-image: url('/images/content/stories-1.svg')"
               >
-                <h4 class="stories__title">Иновационная заморозка</h4>
+                <h4 class="stories__title">Инновационная заморозка</h4>
               </div>
               <div
                 class="stories__item swiper-slide"
@@ -173,7 +173,7 @@
                 <div class="process__number">03</div>
                 <div class="process__text process__text--long">
                   <h3 class="process__text-title">
-                    Иновационная акустическая заморозка
+                    Инновационная акустическая заморозка
                   </h3>
                   Звуковые волны не позволяют формироваться крупным кристаллам
                   льда, которые повреждают клеточную структуру продукта, ведут к
